--- a/RepositoryParser/RepositoryParser.Controls/ImageButton/ImageButton.xaml
+++ b/RepositoryParser/RepositoryParser.Controls/ImageButton/ImageButton.xaml
@@ -31,7 +31,9 @@
                             HorizontalAlignment="Stretch"
                             RenderTransformOrigin="0.5 0.5"
                             x:Name="Border"  
-                            Background="{TemplateBinding Background}">
+                            Background="{TemplateBinding Background}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}">
                             <Border.RenderTransform>
                                 <ScaleTransform ScaleX="1.0" ScaleY="1.0" CenterX="0.5" CenterY="0.5" />
                             </Border.RenderTransform>
