--- a/RepositoryParser/RepositoryParser/Resources/ButtonStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/ButtonStyles.xaml
@@ -3,7 +3,8 @@
                     xmlns:local="clr-namespace:RepositoryParser.Resources"
                     xmlns:resw="clr-namespace:RepositoryParser.Properties"
                     xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
-                    xmlns:conventers="clr-namespace:RepositoryParser.Controls.ImageButton.Conventers;assembly=RepositoryParser.Controls">
+                    xmlns:conventers="clr-namespace:RepositoryParser.Controls.ImageButton.Conventers;assembly=RepositoryParser.Controls"
+                    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls">
 
 
 
@@ -186,11 +187,18 @@
         </Setter>
     </Style>
 
-    <conventers:LenghtToAnimationLenghtConventer x:Key="LenghtToAnimationLenghtConventer"/>
-    <conventers:BoolToOrientationConventer x:Key="BoolToOrientationConventer"/>
-    <conventers:BoolToHorizontalAlligmentConventer x:Key="BoolToHorizontalAlligmentConventer"/>
+    <Style x:Key="CleanCloseWindowButtonStyle" TargetType="{x:Type controls:WindowButtonCommands}" BasedOn="{StaticResource MetroWindowButtonStyle}">
+        <Style.Triggers>
+
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#EB2F2F" />
+                <Setter Property="Foreground" Value="{DynamicResource WhiteBrush}" />
+            </Trigger>
+
+        </Style.Triggers>
+    </Style>
 
 
-    
-    
+
+
 </ResourceDictionary>
