--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityContentProviderView.xaml
@@ -7,6 +7,7 @@
              xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
              xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
              xmlns:resw="clr-namespace:RepositoryParser.Properties"
+             xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
              DataContext="{Binding Source={StaticResource Locator}, Path=UsersActivityContentProvider}"
@@ -42,18 +43,31 @@
                    />
         
         <StackPanel Grid.Column="1" Grid.Row="1" Grid.RowSpan="2">
-            <Button Style="{StaticResource AppGraphiteButton}" Command="{Binding OpenChartViewCommand}" x:Name="Btn1" Margin="10,0,0,5">
-                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=Btn1, Path=ActualWidth}">
-                    <Image Style="{StaticResource AppButtonIcon}"  Source="../../Assets/Icons/Poll Topic-50.png" Margin="5,0,5,0"/>
-                    <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.CountOfCommits}"/>
-                </StackPanel>
-            </Button>
-            <Button Style="{StaticResource AppGraphiteButton}" Command="{Binding OpenCodeFrequencyCommand}" x:Name="Btn2" Margin="10,0,0,5">
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="{Binding ElementName=Btn2, Path=ActualWidth}">
-                    <Image Style="{StaticResource AppButtonIcon}"  Source="../../Assets/Icons/Code-50.png" Margin="5,0,5,0"/>
-                    <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.CountOfLines}"/>
-                </StackPanel>
-            </Button>
+            <imageButton:ImageButton 
+                Command="{Binding OpenChartViewCommand}"
+                x:Name="Btn1"
+                BorderBrush="{StaticResource LightGray}"
+                BorderThickness="0,0,0,0.5"
+                ImageHeight="32"
+                ImageWidth="32"
+                Background="Transparent"
+                Foreground="Black"
+                ImageSource="../../Assets/Icons/PNG_Gray/Poll Topic-100.png"
+                Text="{x:Static resw:Resources.CountOfCommits}"
+                Height="45"/>
+               
+            <imageButton:ImageButton
+                Command="{Binding OpenCodeFrequencyCommand}"
+                x:Name="Btn2" 
+                BorderBrush="{StaticResource LightGray}"
+                BorderThickness="0,0,0,0.5"
+                ImageHeight="32"
+                ImageWidth="32"
+                Background="Transparent"
+                Foreground="Black"
+                ImageSource="../../Assets/Icons/PNG_Gray/Code-100.png"
+                Text="{x:Static resw:Resources.CountOfLines}"
+                Height="45"/>
         </StackPanel>
 
         <ContentControl Grid.Row="1" Grid.Column="0" Content="{Binding CurrentViewModel}"/>
