--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -14,6 +14,7 @@
         xmlns:usersActivityViews="clr-namespace:RepositoryParser.View.UsersActivityViews"
         xmlns:view="clr-namespace:RepositoryParser.View"
         xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
+        xmlns:command="http://www.galasoft.ch/mvvmlight"
         DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
         MinHeight="600" MinWidth="800"
         ShowIconOnTitleBar="True"
@@ -26,6 +27,7 @@
         WindowStartupLocation="CenterScreen"  
         OverrideDefaultWindowCommandsBrush="Black"
         TitlebarHeight="40"
+        Closing="MainWindow_OnClosing"
         >
 
     <Controls:MetroWindow.TitleTemplate>
