--- a/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
@@ -64,7 +64,7 @@
 
     <Style TargetType="StatusBar" x:Key="AppStatusBar">
         <Setter Property="Opacity" Value="0.7"/>
-        <Setter Property="Background" Value="{StaticResource Graphite}"/>
+        <Setter Property="Background" Value="White"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
     </Style>
@@ -72,10 +72,8 @@
     <Style TargetType="controls:ProgressRing" x:Key="AppProgressRing">
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Width" Value="50"/>
-        <Setter Property="Height" Value="12"/>
         <Setter Property="Margin" Value="3"/>
-        <Setter Property="Foreground" Value="{StaticResource Grey}"/>
+        <Setter Property="Foreground" Value="{StaticResource Graphite}"/>
         <Setter Property="Opacity" Value="1"/>
     </Style>
 
