--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
@@ -13,24 +13,16 @@
              >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Background="{StaticResource Graphite}">
-            <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.CoutOfCommitsAnalyse}" HorizontalAlignment="Center"/>
-        </Border>
-
-        <TabControl Grid.Column="1" Grid.Row="1">
+        <TabControl Grid.Row="0">
             <TabItem Header="{x:Static resw:Resources.Chart}">
-                <chartingToolkit:Chart Title="{x:Static resw:Resources.DayActivityChartChart}" Background="{StaticResource Grey}">
+                <chartingToolkit:Chart Title="{x:Static resw:Resources.CountOfCommits}" Background="{StaticResource Grey}">
                     <chartingToolkit:Chart.LegendStyle>
                         <Style TargetType="Control">
                             <Setter Property="Width" Value="0" />
@@ -47,7 +39,7 @@
                 </chartingToolkit:Chart>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
-                <DataGrid Grid.Row="1" Grid.Column="0"
+                <DataGrid
                       ItemsSource="{Binding KeyCollection}"
                       CanUserSortColumns="True"
                       AlternatingRowBackground="{StaticResource MyRowColor}" AlternationCount="2"
@@ -64,7 +56,7 @@
             </TabItem>
         </TabControl>
 
-        <DockPanel Grid.Column="1" Grid.Row="2">
+        <DockPanel Grid.Row="1">
             <imageButton:ImageButton 
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/Export_grey.png"
@@ -76,6 +68,5 @@
                 Width="180"/>
         </DockPanel>
 
-        <Border Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="1" Background="{StaticResource MyGreen}"/>
     </Grid>
 </UserControl>
