--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
@@ -13,25 +13,18 @@
                 >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Background="{StaticResource Graphite}">
-            <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.CoutOfCommitsAnalyse}" HorizontalAlignment="Center"/>
-        </Border>
 
-        <TabControl Grid.Row="1" Grid.Column="1">
+        <TabControl Grid.Row="0" Grid.Column="0">
             <TabItem Header="{x:Static resw:Resources.Chart}">
                 <chartingToolkit:Chart x:Name="Chart" 
-                                       Title="{x:Static resw:Resources.ActivityChart}" 
+                                       Title="{x:Static resw:Resources.CountOfCommits}" 
                                        Background="{StaticResource Grey}" 
                                        LegendTitle="{x:Static resw:Resources.Legend}"
                                        >
@@ -63,7 +56,7 @@
             </TabItem>
         </TabControl>
 
-        <DockPanel Grid.Column="1" Grid.Row="2">
+        <DockPanel Grid.Column="0" Grid.Row="1">
             <imageButton:ImageButton 
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/Export_grey.png"
@@ -74,7 +67,6 @@
                 Background="{StaticResource Graphite}"
                 Width="180"/>
         </DockPanel>
-        
-        <Border Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="1" Background="{StaticResource MyGreen}"/>
+
     </Grid>
 </UserControl>
